js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-import-source-no-new-call-expression-prop-access.js








































$DONOTEVALUATE();

do {
  new import.source('<module source>').prop;
} while (false);
